--- a/test-server/themes/demo/templates/section.html
+++ b/test-server/themes/demo/templates/section.html
@@ -1,17 +1,21 @@
-<div class="section"
-	{{ ui.toolbar(node.uri, "section", ["editContent", "editAttributes", "deleteSection"], {"uri": node.uri}) | raw }}
-	>
+<div class="section" {{ ui.toolbar(node.uri, "section" , ["editContent", "editAttributes" , "deleteSection" ], {"uri":
+	node.uri}) | raw }}>
 	<div class="container">
 		{{ node.content | default('your content here') | raw}}
 	</div>
-	<div  >
-		<div class="container" 
-			{{ ui.editMeta("text", "description", node.uri, node.uri) | raw }} >
+	<div>
+		<div class="container" {{ ui.editMeta("text", "description" , node.uri, node.uri) | raw }}>
 			{{ node.meta.getOrDefault('description', 'description here') | raw}}
 		</div>
-		<div class="container" 
-			{{ ui.editMeta("text", "parent.text", node.uri, node.uri) | raw }} >
+		<div class="container" {{ ui.editMeta("text", "parent.text" , node.uri, node.uri) | raw }}>
 			{{ node.meta.getOrDefault('parent.text', 'Parent.Text here') | raw}}
 		</div>
+	</div>
+	<div cms-test="{{node.meta.media_url}}">
+		{% if node.meta.containsKey('media_url') %}
+		{% assign media = mediaService.get(node.meta.media_url) %}
+		<img src="/media/{{ media.uri }}?format=small" alt="{{ media.meta.alt }}" data-cms-media-actions="meta upload" data-cms-node-uri="{{ node.uri }}"
+			data-cms-meta-element="media_url" />
+		{% endif %}
 	</div>
 </div>
