--- a/test-server/themes/demo/templates/section.html
+++ b/test-server/themes/demo/templates/section.html
@@ -11,11 +11,11 @@
 			{{ node.meta.getOrDefault('parent.text', 'Parent.Text here') | raw}}
 		</div>
 	</div>
-	<div cms-test="{{node.meta.media_url}}">
+	<div>
 		{% if node.meta.containsKey('media_url') %}
 		{% assign media = mediaService.get(node.meta.media_url) %}
-		<img src="/media/{{ media.uri }}?format=small" alt="{{ media.meta.alt }}" data-cms-media-actions="meta upload" data-cms-node-uri="{{ node.uri }}"
-			data-cms-meta-element="media_url" />
+		<img src="/media/{{ media.uri }}?format=small" alt="{{ media.meta.alt }}" 
+			{{ ui.mediaToolbar(["select", "meta"], {"uri": node.uri, "element": "media_url" }) | raw }} />
 		{% endif %}
 	</div>
 </div>
