--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -37,10 +37,11 @@
 			<hr />
 		</div>
 
-		<div cms-test="{{node.meta.media_url}}">
+		<div>
 			{% if node.meta.containsKey('media_url') %}
 				{% assign media = mediaService.get(node.meta.media_url) %}
-				<img src="/media/{{ media.uri }}?format=small" alt="{{ media.meta.alt }}" data-cms-media-actions="meta upload" data-cms-meta-element="media_url"  />
+				<img src="/media/{{ media.uri }}?format=small" alt="{{ media.meta.alt }}" 
+					{{ ui.mediaToolbar(["select", "meta"], {"uri": node.uri, "element": "media_url" }) | raw }} />
 			{% endif %}
 		</div>
 
