--- a/test-server/themes/demo/templates/section.html
+++ b/test-server/themes/demo/templates/section.html
@@ -3,7 +3,11 @@
 	<div class="container">
 		{{ node.content | default('your content here') | raw}}
 	</div>
-		
+	
+
+	<div style="display: none;" {{ ui.editMeta("datetime", "publish_date" , node.uri, node.uri) | raw }}></div>
+	<div style="display: none;" {{ ui.editMeta("datetime", "unpublish_date" , node.uri, node.uri) | raw }}></div>
+
 	<div>
 		<div class="container" {{ ui.editMeta("text", "description" , node.uri, node.uri) | raw }}>
 			{{ node.meta.getOrDefault('description', 'description here')}}
@@ -12,7 +16,6 @@
 			{{ node.meta.getOrDefault('parent.text', 'Parent.Text here')}}
 		</div>
 		<div class="container" {{ ui.editMeta("markdown", "about" , node.uri, node.uri) | raw }}>
-
 			{{ cms.markdown.render(node.meta.getOrDefault('about', '--about--')) | raw}}
 		</div>
 	</div>
