--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -40,8 +40,8 @@
 		<div>
 			{% if node.meta.containsKey('media_url') %}
 				{% assign media = mediaService.get(node.meta.media_url) %}
-				<img src="/media/{{ media.uri }}?format=small" alt="{{ media.meta.alt }}" 
-					{{ ui.mediaToolbar(["select", "meta"], {"uri": node.uri, "element": "media_url" }) | raw }} />
+				<img src="/media/{{ media.uri }}?format=cropped" alt="{{ media.meta.alt }}" 
+					{{ ui.mediaToolbar(["select", "meta", "focalPoint"], {"uri": node.uri, "element": "media_url" }) | raw }} />
 			{% endif %}
 		</div>
 
