auth extension for template functions

--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -42,6 +42,8 @@
 				<div>
 					<h4>template function test</h4>
 					{{ message({'message': "Hello", 'color': "red"}) | raw }}
+					<br/>
+					user: {{ username() }} 
 				</div>
 			</div>
 			<hr />
