fix test project

--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -41,7 +41,7 @@
 				</div>
 				<div>
 					<h4>template function test</h4>
-					{{ message({'message': "Hello", 'color': "red"}) | raw }}
+					{{ fn_message({'message': "Hello", 'color': "red"}) | raw }}
 					<br/>
 					user: {{ username() }} 
 				</div>
