--- a/test-server/themes/demo/templates/libs/fragments.html
+++ b/test-server/themes/demo/templates/libs/fragments.html
@@ -8,11 +8,13 @@
 
 <link
   rel="stylesheet"
-  href="{{ links.createUrl('/theme/assets/style.css') }}"
+  href="{{ cms.links.createUrl('/theme/assets/style.css') }}"
   defer
 />
 
 {% if PREVIEW_MODE %}
-  <script  src="{{ links.createUrl('/manager/js/manager-inject.js') }}" type="module"></script>
-  <link rel="stylesheet" href="{{ links.createUrl('/manager/css/manager-inject.css') }}" />
+  <script  src="{{ cms.links.createUrl('/manager/js/manager-inject.js') }}" type="module"></script>
+  <link rel="stylesheet" href="{{ cms.links.createUrl('/manager/css/manager-inject.css') }}" />
 {% endif %}
+
+{{ hooks({'hook': 'theme/template/header'}) | raw }}
