--- a/test-server/themes/demo/templates/libs/fragments.html
+++ b/test-server/themes/demo/templates/libs/fragments.html
@@ -1,7 +1,7 @@
 <title>{{node.meta.title}}</title>
 <link
   rel="canonical"
-  href="{{ site.get('baseurl') + requestContext.uri }}"
+  href="{{ node.canonicalUrl }}"
 />
 <link rel="shortcut icon" href="/favicon.ico" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
