fixing manager preview

--- a/test-server/themes/demo/templates/libs/language_switcher.html
+++ b/test-server/themes/demo/templates/libs/language_switcher.html
@@ -1,6 +1,9 @@
 {% if MANAGER %}
   <h2>running in manager</h2>
 {% endif %}
+{% if PREVIEW_MODE %}
+  <h2>running in preview</h2>
+{% endif %}
 <div class="language-buttons">
   {% for translation in node.translation.translations() %}
   <a href="{{ translation.url() }}" class="lang {% if translation.current() %}active{% endif %}">
